# openmkview

./: .gitignore  AGENTS.md  ALL_ITERATIONS_SUMMARY.md  COMPREHENSIVE_TEST.md  CURRENT_STATUS.md  Cargo.toml  E2E_COMPARISON_REPORT.md  FOUR_ROUNDS_COMPLETE.md  ITERATION_4_SUMMARY.md  ITERATION_COMPLETE.md  ITERATION_SUMMARY.md  MIGRATION_COMPLETE.md  MIGRATION_PLAN.md  MIGRATION_PLAN_A_COMPLETE.md  MIGRATION_PROGRESS.md  Makefile  README.md  REQUIREMENTS.md  RUN_INSTRUCTIONS.md  RUST_MIGRATION_PROGRESS.md  SESSION_RESUMED.md  TEST_REPORT.md  TEST_RESULTS.md  build.rs  migration-report.md  next.config.ts  package-lock.json  package.json  run-e2e-tests.sh
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/instructions/: git-commit.instructions.md
.playwright-cli/: page-2026-03-01T09-15-22-999Z.yml  page-2026-03-01T09-15-37-560Z.yml  page-2026-03-01T09-15-53-625Z.yml  page-2026-03-01T09-16-06-128Z.yml  page-2026-03-01T09-17-35-275Z.yml  page-2026-03-01T09-17-55-628Z.yml
.playwright-mcp/: page-2026-05-24T03-42-04-871Z.yml  page-2026-05-24T03-42-11-884Z.yml  page-2026-05-24T03-44-51-335Z.yml  page-2026-05-24T04-13-56-983Z.yml  page-2026-05-24T04-15-04-209Z.yml  page-2026-05-24T04-16-55-981Z.yml  page-2026-05-24T04-19-53-197Z.yml  page-2026-05-24T08-03-07-331Z.yml
contrib/: openmkview.service.in
frontend/: DESIGN.md  E2E-TEST-REPORT.md  TASKS.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts  fixtures.ts  mobile-menu.spec.ts  project-switching.spec.ts  show-component.spec.ts
frontend/src/: App.tsx  index.css  index.tsx  vite-env.d.ts
frontend/tests/: mobile-menu.spec.ts
openmkview-rs/: .gitignore  Cargo.toml
openmkview-rs/openmkview-rs/templates/: index.html
openmkview-rs/src/: db.rs  lib.rs  main.rs  models.rs
openmkview-rs/src/handlers/: files.rs  git.rs  mod.rs  projects.rs  settings.rs
openmkview-rs/src/templates/: index.html
plan/: passkey-design.md  passkey-review-remediation.md
src/: auth.rs  config.rs  lib.rs  main.rs  passkey.rs  static_files.rs
src/app/: globals.css  layout.tsx
src/db/: connection.rs  mod.rs
src/errors/: mod.rs
(+225 files in other folders)
