[package]
name = "openmkview"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web 框架
actix-web = { version = "4", features = ["cookies"] }

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# 工具
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
regex = "1"
rand = "0.8"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
bcrypt = "0.16"
rpassword = "7"

# 日志
env_logger = "0.11"
log = "0.4"

# 静态文件处理
actix-files = "0.6"
rust-embed = "8"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
