[package]
name = "openmkview"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web 框架
actix-web = "4"
actix-files = "0.6"

# 数据库
rusqlite = { version = "0.32", features = ["bundled"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 工具
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

# 日志
env_logger = "0.11"
log = "0.4"

# 模板引擎
askama = "0.13"
askama_actix = "0.13"

# Markdown 处理
pulldown-cmark = "0.12"

# 静态资源嵌入
rust-embed = "8"
